# goit-ds-hw-01

./: .dockerignore  Dockerfile  README.md  addressbook.pkl  pyproject.toml  requests.sql  seed.py  tasks.db  tasks.sql
assistant/: main.py
