[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "Personal assistant CLI application"
authors = ["Denko <denko@example.com>"]
packages = [{ include = "assistant" }]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
